{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 76,
  "lineage": "e909cd7d-7d24-977d-a17a-78ecdb43b477",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "BTS_HW_EIP",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03071f2b0d27b132d",
            "public_dns": "ec2-52-50-120-193.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.120.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "BTS_HW_EIP_1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04d5b228ffdb4cf57",
            "public_dns": "ec2-52-49-134-26.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.134.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "BTS_HW_EIP_2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "BTS_HW_ELB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:052960627260:loadbalancer/tf-lb-20200122191402314600000001",
            "availability_zones": [
              "eu-west-1a",
              "eu-west-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-lb-20200122191402314600000001-1386395482.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:8000",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20200122191402314600000001",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20200122191402314600000001",
            "security_groups": [
              "sg-09e84b6d70d0b8871"
            ],
            "source_security_group": "052960627260/default",
            "source_security_group_id": "sg-09e84b6d70d0b8871",
            "subnets": [
              "subnet-0150d3af154e4edd4",
              "subnet-0759dee543a1806b3"
            ],
            "tags": {
              "Name": "BTS_HW_ELB"
            },
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_subnet.BTS_HW_SN_PUBLIC",
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "BTS_HW_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0aa16e3b6d6f4651e",
            "owner_id": "052960627260",
            "tags": {
              "Name": "BTS_HW_IGW"
            },
            "vpc_id": "vpc-0ae21976aec47786f"
          },
          "dependencies": [
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "BTS_HW_NAT",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03071f2b0d27b132d",
            "id": "nat-011474e5b01c64eb8",
            "network_interface_id": "eni-01ce7386b07efee37",
            "private_ip": "192.168.2.208",
            "public_ip": "52.50.120.193",
            "subnet_id": "subnet-0150d3af154e4edd4",
            "tags": {
              "Name": "BTS_HW_NAT_1"
            }
          },
          "dependencies": [
            "aws_eip.BTS_HW_EIP",
            "aws_internet_gateway.BTS_HW_IGW",
            "aws_subnet.BTS_HW_SN_PUBLIC",
            "aws_vpc.BTS_HW_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d5b228ffdb4cf57",
            "id": "nat-01de5a775deb891b5",
            "network_interface_id": "eni-0778f8e03d9bdb7c5",
            "private_ip": "192.168.3.41",
            "public_ip": "52.49.134.26",
            "subnet_id": "subnet-0759dee543a1806b3",
            "tags": {
              "Name": "BTS_HW_NAT_2"
            }
          },
          "dependencies": [
            "aws_eip.BTS_HW_EIP",
            "aws_internet_gateway.BTS_HW_IGW",
            "aws_subnet.BTS_HW_SN_PUBLIC",
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "BTS_HW_RT_IGW_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa16e3b6d6f4651e",
            "id": "r-rtb-0c4494d4b158b00a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c4494d4b158b00a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.BTS_HW_IGW",
            "aws_route_table.BTS_HW_RT_IGW",
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "BTS_HW_RT_NAT_ROUTE",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ffb1c9eaf4a105de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-011474e5b01c64eb8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ffb1c9eaf4a105de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.BTS_HW_EIP",
            "aws_internet_gateway.BTS_HW_IGW",
            "aws_nat_gateway.BTS_HW_NAT",
            "aws_route_table.BTS_HW_RT_NAT",
            "aws_subnet.BTS_HW_SN_PUBLIC",
            "aws_vpc.BTS_HW_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c19b5058264248f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-01de5a775deb891b5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c19b5058264248f2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.BTS_HW_EIP",
            "aws_internet_gateway.BTS_HW_IGW",
            "aws_nat_gateway.BTS_HW_NAT",
            "aws_route_table.BTS_HW_RT_NAT",
            "aws_subnet.BTS_HW_SN_PUBLIC",
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "BTS_HW_RT_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c4494d4b158b00a1",
            "owner_id": "052960627260",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "BTS_HW_RT_IGW"
            },
            "vpc_id": "vpc-0ae21976aec47786f"
          },
          "dependencies": [
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "BTS_HW_RT_NAT",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ffb1c9eaf4a105de",
            "owner_id": "052960627260",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "BTS_HW_RT_NAT"
            },
            "vpc_id": "vpc-0ae21976aec47786f"
          },
          "dependencies": [
            "aws_vpc.BTS_HW_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c19b5058264248f2",
            "owner_id": "052960627260",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "BTS_HW_RT_NAT"
            },
            "vpc_id": "vpc-0ae21976aec47786f"
          },
          "dependencies": [
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BTS_HW_RT_IGW_MAP",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000af657762d7d65c",
            "route_table_id": "rtb-0c4494d4b158b00a1",
            "subnet_id": "subnet-0150d3af154e4edd4"
          },
          "dependencies": [
            "aws_route_table.BTS_HW_RT_IGW",
            "aws_subnet.BTS_HW_SN_PUBLIC",
            "aws_vpc.BTS_HW_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c83a9975db4abde5",
            "route_table_id": "rtb-0c4494d4b158b00a1",
            "subnet_id": "subnet-0759dee543a1806b3"
          },
          "dependencies": [
            "aws_route_table.BTS_HW_RT_IGW",
            "aws_subnet.BTS_HW_SN_PUBLIC",
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BTS_HW_RT_NAT_MAP",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055673234b9d7edf2",
            "route_table_id": "rtb-0ffb1c9eaf4a105de",
            "subnet_id": "subnet-01fc05dc8d685c94d"
          },
          "dependencies": [
            "aws_route_table.BTS_HW_RT_NAT",
            "aws_subnet.BTS_HW_SN_PRIVATE",
            "aws_vpc.BTS_HW_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2a7ba03e03b66fe",
            "route_table_id": "rtb-0c19b5058264248f2",
            "subnet_id": "subnet-012290c6099b96b5c"
          },
          "dependencies": [
            "aws_route_table.BTS_HW_RT_NAT",
            "aws_subnet.BTS_HW_SN_PRIVATE",
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BTS_HW_SN_PRIVATE",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052960627260:subnet/subnet-01fc05dc8d685c94d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-01fc05dc8d685c94d",
            "map_public_ip_on_launch": false,
            "owner_id": "052960627260",
            "tags": {
              "Name": "BTS_HW_SN_PRIVATE_1"
            },
            "vpc_id": "vpc-0ae21976aec47786f"
          },
          "dependencies": [
            "aws_vpc.BTS_HW_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052960627260:subnet/subnet-012290c6099b96b5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-012290c6099b96b5c",
            "map_public_ip_on_launch": false,
            "owner_id": "052960627260",
            "tags": {
              "Name": "BTS_HW_SN_PRIVATE_2"
            },
            "vpc_id": "vpc-0ae21976aec47786f"
          },
          "dependencies": [
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BTS_HW_SN_PUBLIC",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052960627260:subnet/subnet-0150d3af154e4edd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0150d3af154e4edd4",
            "map_public_ip_on_launch": false,
            "owner_id": "052960627260",
            "tags": {
              "Name": "BTS_HW_SN_PUBLIC_1"
            },
            "vpc_id": "vpc-0ae21976aec47786f"
          },
          "dependencies": [
            "aws_vpc.BTS_HW_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052960627260:subnet/subnet-0759dee543a1806b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0759dee543a1806b3",
            "map_public_ip_on_launch": false,
            "owner_id": "052960627260",
            "tags": {
              "Name": "BTS_HW_SN_PUBLIC_2"
            },
            "vpc_id": "vpc-0ae21976aec47786f"
          },
          "dependencies": [
            "aws_vpc.BTS_HW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "BTS_HW_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052960627260:vpc/vpc-0ae21976aec47786f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e8c6b34e03755dd0",
            "default_route_table_id": "rtb-0295b284f014c008b",
            "default_security_group_id": "sg-09e84b6d70d0b8871",
            "dhcp_options_id": "dopt-eaf4a08c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ae21976aec47786f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0295b284f014c008b",
            "owner_id": "052960627260",
            "tags": {
              "Name": "BTS_HW_VPC"
            }
          }
        }
      ]
    }
  ]
}